--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "music-disc",
+    "name": "music-disc-discord-player",
     "version": "1.4.2",
     "description": "Discord Music Bot",
     "main": "/src/index.js",
@@ -17,20 +17,20 @@
     },
     "homepage": "https://github.com/hmes98318/Music-Disc#readme",
     "dependencies": {
-        "@discord-player/equalizer": "^0.2.1",
-        "@discord-player/extractor": "^4.2.1",
-        "@discord-player/utils": "^0.2.1",
+        "@discord-player/equalizer": "^0.2.3",
+        "@discord-player/extractor": "^4.4.5",
+        "@discord-player/utils": "^0.2.2",
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
-        "console-stamp": "^3.1.1",
-        "discord-player": "^6.3.0",
-        "discord.js": "^14.11.0",
-        "dotenv": "^16.0.3",
+        "console-stamp": "^3.1.2",
+        "discord-player": "^6.6.6",
+        "discord.js": "^14.14.1",
+        "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "mediaplex": "^0.0.9",
         "ms": "2.1.3",
-        "opusscript": "~0.0.8",
-        "play-dl": "^1.9.6"
+        "play-dl": "^1.9.7"
     },
     "engines": {
-        "node": ">=16.13.0"
+        "node": ">=18.0.0"
     }
 }
