--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,8 @@ services:
     image: hmes98318/music-disc:1.4.2
     container_name: music-disc
     restart: always
-    ports:
-      - 33333:33333
     environment:
+      TZ: "Asia/Taipei"
       TOKEN: "your_token"
       PREFIX: "+"
       PLAYING: "+help | music"
@@ -19,3 +18,5 @@ services:
       TEXT_QUERY_TYPE: "youtubeSearch"
       URL_QUERY_TYPE: "auto"
       DP_FORCE_YTDL_MOD: "play-dl"
+    ports:
+      - 33333:33333
